syntax = "proto3";

option go_package = "proto";

service Metadata {
    rpc SyncMetadata(SyncMetadataRequest) returns (SyncMetadataResponse) {}
    rpc ListMetadata(ListMetadataRequest) returns (ListMetadataResponse) {}
}

message MetadataDetail {
    string project_id = 1;
    string user_id = 2;
    string type = 3;
}

message SyncMetadataRequest {
    string id = 1;
}

message ListMetadataRequest {
    // the number of records at max which can be there in response
    int32 limit = 1;
    // the index of the first record to be returned
    int32 offset = 2;
    //used to denote the type of cloud provider
    string type = 3;
    //name of the backend
    string backendName = 4;
    string region = 5;
    // name of the bucket
    string bucketName = 6;
    // name of the object
    string objectName = 7;
    // the size of the object in <operator integer  unit> where operator is eq, gte,gt,lte,lt and unit is KB,MB,GB and integer is always not less than zero
    string sizeOfObject = 8;
    // the size of the bucket in <operator integer  unit> where operator is eq, gte,gt,lte,lt and unit is KB,MB,GB and integer is always not less than zero
    string sizeOfBucket = 9;
}

message SyncMetadataResponse {
    repeated MetadataDetail MetadataDetail = 1;
}

message ListMetadataResponse {
    repeated Bucket buckets = 1;
}

message Bucket {
    //The uuid of the bucket.
    string id = 1;
    // The createdAt representing the server time when the bucket was created.
    string creationDate = 2;
    // The name of the bucket.
    string name = 3;
    string region = 4;
    string type = 5;
    // The number of objects in the bucket
    int32 numberOfObjects = 6;
    // The total size occupied by the bucket
    int32 totalSizeInBytes = 7;
    // The tags of the bucket
    string tags = 8;
    repeated Object objects = 9;
}

message Object {
    // The uuid of the object
    string id = 1;
    // The date of the last modification on the object
    string lastModifiedDate = 2;
    // The name of the object
    string name = 3;
    // The name of the bucket to which the object belongs
    string bucketName = 4;
    // The size o the object in bytes
    int32 sizeInBytes = 5;
    // ??
    string type = 6;
    // true if server side encyption is enabled
    bool serverSideEncryptionEnabled = 7;
    // used to store the version info of the object
    string versionId = 9;
    // used to denote the storage class of the object in the cloud vendor
    string storageClass = 10;
    string redirectLocation = 11;
    string replicationStatus = 12;
    string expiresDate = 13;
    string grantControl = 14;
    string tags = 15;
    string metadata = 16;
}